dem alignments and features corrections

--- a/assets/dem/dem_dashboard.css
+++ b/assets/dem/dem_dashboard.css
@@ -35,6 +35,7 @@ margin-top:10px;
 margin-bottom:10px;
 height:40px;
 width :100%;
+color:white;
 }
 
 .insights-box{
@@ -52,10 +53,18 @@ background-color:var(--tiles-background);
 border-radius:5px;
 
 }
-.day-group{
+.mainbar-toolbox{
 display:flex;
 background-color:var(--tiles-background);
+ border-radius:4px;
 }
+
+.mainbar-toolbox button{
+ margin: 0 10px;
+ border-radius:4px;
+}
+
+
 .graph-box{
 background-color:var(--tiles-background);
 border-radius:5px;
